# vortex-server

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  WEB_DISTRIBUTION.md  debug_db.py  debug_duplicates.py  deploy_web.sh  fix_duplicates.py  install.sh  vortex.service  vortex_server.service
.github/workflows/: release.yml
android_app/: build.gradle.kts  gradlew.bat  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/gradle/: libs.versions.toml
migrations/: 20250131220000_initial_schema.sql  20260201120000_add_media_info.sql  20260601120000_library_multiple_paths.sql  20260603120000_add_books_support.sql  20260607120000_metadata_provider_plugins.sql  20260610120000_extended_metadata.sql  20260611120000_add_reading_style.sql  20260613120000_users_table.sql  20260613120050_normalized_metadata.sql  20260613120100_media_items_spine.sql  20260613120200_per_user_state.sql  20260613120300_bootstrap_admin.sql  20260613130000_playlists.sql  20260704120000_images_recycle_bin.sql  20260707120000_book_series.sql
src/: error.rs  main.rs
src/api/: middleware.rs  mod.rs  routes.rs
src/api/dtos/: requests.rs  responses.rs
src/api/handlers/: auth.rs  book_series.rs  books.rs  common.rs  favorites.rs  galleries.rs  images.rs  library.rs  media.rs  mod.rs  playback.rs  playlists.rs  providers.rs  series.rs  settings.rs  system.rs  transcode.rs  tv.rs
src/core/: media_service.rs  metadata.rs  mod.rs  scanner.rs
src/db/: mod.rs  models.rs
src/dtos/: mod.rs  requests.rs  tmdb.rs
src/infrastructure/: cache.rs  config.rs  error.rs  logging.rs  mod.rs
src/metadata_providers/: manifest.rs  mod.rs  registry.rs  traits.rs
src/metadata_providers/tmdb/: mod.rs  provider.rs  types.rs
src/metadata_providers/tvdb/: mod.rs  (+2 more)
src/models/: metadata.rs  mod.rs  tv.rs  user.rs
src/providers/: mod.rs  tmdb.rs  traits.rs
src/services/: book_service.rs  books.rs  catalog.rs  catalog_service.rs  favorites_service.rs  gallery_service.rs  images.rs  library_service.rs  lyrics.rs  lyrics_service.rs  media_service.rs  metadata.rs  metadata_service.rs  mod.rs  playlists_service.rs  progress_service.rs  provider_configs_service.rs  scanner.rs  settings_service.rs  user_service.rs
static/: index.html
static/assets/: Reader-B2EyZuVm.js  Reader-DP1_rU8y.js  Reader-DgkIxYeM.js  Reader-DrffWld_.js  Reader-dUvxzCTp.js  index--cCTHHUd.css  index-1w0UePZE.css  index-3JTPpX7m.js  index-AdDse7zA.js  index-B22e1z9_.js  index-BNm89SRk.js  index-BT2ip1OZ.css  index-BeDAz3ky.js  index-BgJpeUA6.css  index-BkdmTUCj.css  index-BlEddNZ2.css  index-CC7Pvo_J.js  index-CFpHsr6S.css  index-CFxAix76.js  index-CH7wCeSi.css  index-CUM_kyUu.css  index-CUU6mwer.css  index-CVI_bKSI.js  index-CYkdVQ75.js  index-C_XS0Ap6.js  index-CbibGo46.css  index-CjOQdxHF.js  index-D4MNpq25.css  index-DAU6uEyZ.js  index-DE4yzkLh.js  index-DEPseUGJ.js  index-DJgVxFVi.js  index-DQP0Ls56.js  index-Da9QiVxt.js  index-DojHKbtF.js  index-DpBlasPj.js  index-H8mWDDF-.js  index-I1r7TnUm.js  index-OIvAVfAS.js  index-PYdPyWb1.js  (+7 more)
(+57 files in other folders)
