[package]
name = "vortex_server"
version = "0.2.10"
edition = "2021"
default-run = "vortex_server"

[package.metadata.deb]
maintainer = "Vortex Developer <dev@vortex.local>"
copyright = "2025, Vortex Contributors"
depends = "$auto"
extended-description = """
A high-performance self-hosted media server written in Rust.
"""
assets = [
    ["target/release/vortex_server", "usr/bin/vortex_server", "755"],
]
systemd-units = { enable = false }

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "macros", "runtime-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
regex = "1"
urlencoding = "2.1.3"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
async-trait = "0.1.89"
argon2 = "0.5"
jsonwebtoken = "9"
tower-cookies = "0.10"
tower = "0.4"
rand = "0.8"
axum-extra = { version = "0.9", features = ["cookie"] }
md5 = "0.8.0"

futures = "0.3"
dashmap = "5"
uuid = { version = "1.20.0", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[[bin]]
name = "vortex_server"
path = "src/main.rs"


